src/styles/Dashboard.css
.dashboard {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 2rem;
  background-color: #192525;
  color: #ffffff;
  min-height: 100vh;
  box-sizing: border-box;
  font-family: 'Segoe UI', sans-serif;
}

.dashboard-container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 4rem;
  background-color: #192525;
  min-height: 100vh;
}


.card-grid {
  display: grid;
  flex-direction: column;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 2.5rem;
  width: 100%;
  margin-bottom: 1rem;
}

@media (max-width: 600px) {
  .dashboard {
    padding: 1rem;
    grid-template-columns: 1fr;
  }

  .card {
    padding: 1rem;
  }
}

.data-sections {
  display: flex;
  justify-content: space-between;
  gap: 0.3rem;
  flex-wrap: nowrap;
}

.data-sections > div {
  flex: 1;
}

